[package]
name = "lyon-loves-ab-glyph"
version = "0.1.0"
authors = ["tigregalis <anak.harimau@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.20"
glyph_brush_layout = "0.2.3"
lyon = "0.16.2"
bevy = { version = "0.10.0" }
