[package]
name = "bevy_text3d"
version = "0.0.1"
authors = ["tigregalis <anak.harimau@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.20"
glyph_brush_layout = "0.2.3"
lyon = "1.0.1"
bevy = { version = "0.12.0" }
bevy_flycam = "0.12.0"
