[package]
name = "bevy_text3d"
version = "0.0.1"
authors = ["tigregalis <anak.harimau@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
glyph_brush_layout = "0.2.3"
lyon = "1.0.1"

[dev-dependencies]
bevy_flycam = "0.12.0"
